--- a/public/src/scss/settings.scss
+++ b/public/src/scss/settings.scss
@@ -41,7 +41,7 @@
 		right: 0;
 		background: transparent;
 		border: none;
-		background-image: url(../images/close_icon.png);
+		background-image: url(../../assets/images/icons/close.png);
 		background-size: cover;
 		width: 20px;
 		height: 20px;
