--- a/views/index.jade
+++ b/views/index.jade
@@ -4,8 +4,9 @@ html(lang="en")
         title = "React + Flux Chat App"
         link(rel='shortcut icon' type='image/x-icon' href='assets/favicon.ico')
         link(href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css')
-        link(rel="stylesheet" href="build/css/main.css")
+        each cssFile in cssFiles
+            link(rel="stylesheet" href=cssFile)
     body
         div(id="content")
-        script(src="build/js/bundle.js")
-        script(src="build/js/main.js")
+        each jsFile in jsFiles
+            script(src=jsFile)
