Change settings drop down style

--- a/public/src/scss/settings.scss
+++ b/public/src/scss/settings.scss
@@ -2,48 +2,81 @@
 @import 'layout_constants';
 
 .settings-dropdown {
-	position: absolute;
-	z-index: 1;
-	right: 12px;
-	top: 44px;
-	border: 1px solid $BORDER_COLOR;
-	box-shadow:2px 4px 20px #000000;
-	width: 300px;
+  position: absolute;
+  z-index: 1;
+  right: 12px;
+  top: 44px;
+  border: 1px solid $BORDER_COLOR;
+  box-shadow: 2px 4px 20px #000000;
+  width: 300px;
 
-	&:before {
-		content: "";
-		display: block;
-		position: absolute;
-		top: -10px;
-		border-style: solid;
-		right: 0;
-		border-width: 0 10px 10px;
-		border-color: $LIGHT_BACKGROUND_COLOR transparent;
-	}
+  &:before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: -10px;
+    border-style: solid;
+    right: 0;
+    border-width: 0 10px 10px;
+    border-color: $LIGHT_BACKGROUND_COLOR transparent;
+  }
 
-	h1, .dialog-footer {
-		background-color: $LIGHT_BACKGROUND_COLOR;
-		padding: 10px;
-	}
+  h1, .dialog-footer {
+    background-color: $LIGHT_BACKGROUND_COLOR;
+    padding: 10px 15px;
+  }
 
-	h1 {
-		color: $PRIMARY_HEADER_COLOR;
-	}
+  h1 {
+    color: $PRIMARY_HEADER_COLOR;
+  }
 
-	form {
-		background-color: white;
-		padding: 10px 0 10px 0;
-	}
+  .dialog-footer {
+    input {
+      width: 100%;
+      padding: 5px;
+      display: block;
+      background: transparent;
+      font-size: 15px;
+      border: 1px solid $BORDER_COLOR;
+      border-radius: 5px;
 
-	.close-botton {
-		position: absolute;
-		top: 0;
-		right: 0;
-		background: transparent;
-		border: none;
-		background-image: url(../../assets/images/icons/close.png);
-		background-size: cover;
-		width: 20px;
-		height: 20px;
-	}
+      &:hover {
+        background: $LIGHT_BACKGROUND_HOVER_COLOR;
+      }
+    }
+  }
+
+  form {
+    background-color: #FFFFFF;
+    padding: 15px;
+
+    label {
+      display: block;
+      text-align: left;
+      margin-bottom: 10px;
+    }
+
+    input {
+      width: 100%;
+      padding: 5px;
+      border-radius: 5px;
+      font-size: 15px;
+    }
+  }
+
+  .close-botton {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: transparent;
+    border: none;
+    background-image: url(../../assets/images/icons/close.png);
+    background-size: cover;
+    width: 20px;
+    height: 20px;
+
+    &:focus {
+      outline: none;
+    }
+  }
 }
