--- a/public/src/scss/theme.scss
+++ b/public/src/scss/theme.scss
@@ -12,3 +12,5 @@ $DATE_TEXT_COLOR: #999999;
 $MESSAGE_SEPERATOR_COLOR: #EFEFEF;
 
 $HEADER_FONT: sans-serif;
+
+$EDITABLE_BACKGROUND_COLOR: #C3DDFA;
