--- a/public/src/scss/message.scss
+++ b/public/src/scss/message.scss
@@ -1,30 +1,35 @@
 @import 'theme';
 @import 'layout_constants';
 
-$author_col_width: 120px;
+$author_col_width: 170px;
 
 .message {
   border-bottom: 1px solid $MESSAGE_SEPERATOR_COLOR;
   padding: 15px;
-}
 
-.message .author {
-  display: inline-block;
-  width: $author_col_width;
-  text-align: right;
-  padding-right: 20px;
-  color: $AUTHOR_TEXT_COLOR;
-  vertical-align: top
-}
+  .info {
+    display: inline-block;
+    width: $author_col_width;
+    text-align: right;
+    padding-right: 20px;
+    color: $AUTHOR_TEXT_COLOR;
+    vertical-align: top;
 
-.message .content {
-  display: inline-block;
-  width: calc(100% - #{$author_col_width});
-}
+    .date-time {
+      color: $DATE_TEXT_COLOR;
+      font-size: 12px;
+    }
+  }
+  .content {
+    display: inline-block;
+    width: calc(100% - #{$author_col_width});
 
-.message .date-time {
-  float: right;
-  padding-left: 20px;
-  color: $DATE_TEXT_COLOR;
-  font-size: 12px;
+    .text-renderer-view, .text-renderer-edit {
+      font-size: 16px;
+    }
+
+    .text-renderer-edit {
+      height: 26px;
+    }
+  }
 }
