--- a/public/src/scss/main.scss
+++ b/public/src/scss/main.scss
@@ -8,6 +8,7 @@
 @import 'side_bar';
 @import 'welcome_panel';
 @import 'text_renderer';
+@import 'chat_room_manager';
 
 body {
   font-family: 'Open Sans', sans-serif;
