--- a/views/index.jade
+++ b/views/index.jade
@@ -2,6 +2,7 @@ doctype html
 html(lang="en")
     head
         title= "React + Flux Chat App"
+        meta(name="viewport" content="width=device-width, initial-scale=1")
         link(rel='shortcut icon' type='image/x-icon' href='assets/favicon.ico')
         link(href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css')
         each cssFile in cssFiles
