Added missed messages feature

--- a/public/src/scss/theme.scss
+++ b/public/src/scss/theme.scss
@@ -14,3 +14,5 @@ $MESSAGE_SEPERATOR_COLOR: #EFEFEF;
 $HEADER_FONT: sans-serif;
 
 $EDITABLE_BACKGROUND_COLOR: #C3DDFA;
+
+$NEW_MESSAGE_INDICATION_COLOR: #3FB349;
