--- a/public/src/scss/main.scss
+++ b/public/src/scss/main.scss
@@ -9,6 +9,8 @@
 @import 'welcome_panel';
 @import 'text_renderer';
 @import 'chat_room_manager';
+@import 'chat_room_list_item';
+@import 'toggle_navigation_button';
 
 body {
   font-family: 'Open Sans', sans-serif;
