Improve usability for mobile
Hide sidebar on initialization for mobile
Make welcome page scrollable

--- a/public/src/scss/welcome_panel.scss
+++ b/public/src/scss/welcome_panel.scss
@@ -2,6 +2,10 @@
 
 .welcome-panel {
   padding: 15px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  overflow-y: auto;
   h1 {
     padding-bottom: 15px;
     text-align: center;
