--- a/public/src/scss/chat_room.scss
+++ b/public/src/scss/chat_room.scss
@@ -8,15 +8,20 @@ $unlock_button_dimension: 25px;
 .chat-room-col {
   display: inline-block;
   box-sizing: border-box;
-  width: 100%;
   position: absolute;
   top: 0;
   bottom: 0;
   right: 0;
+  left: 0;
 
   .nav-open & {
-    width: calc(100% - #{$SIDE_BAR_WIDTH});
+    left: $SIDE_BAR_WIDTH;
   }
+
+  .settings-open & {
+    right: $SIDE_BAR_WIDTH;
+  }
+
 }
 
 //Mobile in portrait
@@ -24,8 +29,16 @@ $unlock_button_dimension: 25px;
   .nav-open {
     //Create off canvas effect
     .chat-room-col {
-      width: 100%;
+      right: -1 * $SIDE_BAR_WIDTH;
       left: $SIDE_BAR_WIDTH;
+    }
+  }
+
+  .settings-open {
+    //Create off canvas effect
+    .chat-room-col {
+      left: -1 * $SIDE_BAR_WIDTH;
+      right: $SIDE_BAR_WIDTH;
     }
   }
 }
