--- a/public/src/scss/settings.scss
+++ b/public/src/scss/settings.scss
@@ -3,6 +3,13 @@
 @import 'icons';
 
 .settings-panel {
+  padding: 15px;
+
+  &:before {
+    content: "SETTINGS";
+    color: $PRIMARY_HEADER_COLOR;
+  }
+
   background: $LIGHT_BACKGROUND_COLOR;
   width: $SIDE_BAR_WIDTH;
   position: absolute;
@@ -11,19 +18,13 @@
   right: 0;
   border-left: 1px solid $BORDER_COLOR;
 
-  h1, .dialog-footer {
+  .dialog-footer {
     background-color: $LIGHT_BACKGROUND_COLOR;
     padding: 10px 15px;
-  }
-
-  h1 {
-    color: $PRIMARY_HEADER_COLOR;
-  }
-
-  .dialog-footer {
     position: absolute;
     bottom: 0;
-    width: 100%;
+    left: 0;
+    right: 0;
     input {
       width: 100%;
       padding: 5px;
@@ -40,7 +41,7 @@
   }
 
   form {
-    padding: 15px;
+    margin-top: 10px;
 
     label {
       display: block;
