Added active icons for navigation and settings

--- a/public/src/scss/header.scss
+++ b/public/src/scss/header.scss
@@ -40,6 +40,10 @@ header {
     width: 25px;
     height: 25px;
     background-size: cover;
+
+    &.active {
+      background-image: url(../../assets/images/icons/settings-active.png);
+    }
   }
 
   .list-icon {
