--- a/public/src/scss/main.scss
+++ b/public/src/scss/main.scss
@@ -12,6 +12,7 @@
 @import 'chat_room_list_item';
 @import 'toggle_navigation_button';
 @import 'toggle_settings_button';
+@import 'animations';
 
 body {
   font-family: 'Open Sans', sans-serif;
