--- a/public/src/scss/main.scss
+++ b/public/src/scss/main.scss
@@ -13,6 +13,7 @@
 @import 'toggle_navigation_button';
 @import 'toggle_settings_button';
 @import 'animations';
+@import 'search_box';
 
 body {
   font-family: 'Open Sans', sans-serif;
